# OpenMDAO.jl

./: .gitignore  Project.toml  README.md
.github/workflows/: CI.yaml  CompatHelper.yml  documentation.yml  register-pypi.yml
dev/: dymos_solution.db  index.html  search_index.js
dev/auto_dense_ad/: index.html
dev/auto_sparse_ad/: index.html
dev/brachistochrone/: index.html
dev/coloring_files/: total_coloring.pkl
dev/creating_python_packages/: index.html
dev/dev_docs/: index.html
dev/installation/: index.html
dev/limitations/: index.html
dev/matrix_free_ad/: index.html
docs/: CondaPkg.toml  LocalPreferences.toml  Project.toml  make.jl
examples/: actuator_disc.jl  actuator_disc_comp.jl  actuator_disc_comp.py  explicit_comp.jl  explicit_comp.py  implicit_comp.jl  implicit_comp.py  implicit_comp_apply_linear.jl  implicit_comp_apply_linear.py
python/: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
python/omjl/: __init__.py  julia_comps.py
python/omjl/tests/: test_gc_component_registry.py  test_same_memory.py  test_stuff.py
python/omjlcomps/: __init__.py  juliapkg-release.json  juliapkg.json
python/omjlcomps/test/: .gitignore  juliapkg-dev.json  juliapkg-test.json  test_aviary_support.jl  test_aviary_support.py  test_ecomp.jl  test_explicit_ad_shape_by_conn.jl  test_explicit_ad_shape_by_conn.py  test_icomp.jl  test_julia_explicit_comp.py  test_julia_implicit_comp.py
src/: OpenMDAO.jl  julia_comps.py  utils.jl
test/: examples.jl  explicit_optional_methods.jl  explicit_required_methods.jl  gc_component_registry.jl  implicit_optional_methods.jl  implicit_required_methods.jl  optional_methods.jl  required_methods.jl  runtests.jl  utils.jl
(+207 files in other folders)
